--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/core": "^7.27.4",
     "@babel/preset-react": "^7.27.1",
+    "axion": "^0.1.0",
     "axios": "^1.10.0",
     "babel-loader": "^10.0.0",
     "react": "^19.1.0",
